Fix CSS issue with steps under gapfill
The CSS selector telling gaps to be inline-block was also being applied to steps attached to the gapfill part.
This makes the selector more restrictive, so the steps aren't affected.

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -610,7 +610,7 @@ div.part {
 	margin-left: 1em;
 }
 
-.part.type-gapfill .part {
+.part.type-gapfill > .prompt .part {
 	display: inline-block;
 }
 
